2008-04-14  Jürg Billeter  <j@bitron.ch>

	* vala/valaparser.vala: fix infinite loop on invalid syntax,
	  fixes bug 528017

2008-04-14  Jürg Billeter  <j@bitron.ch>

	* vala/valaparser.vala: report warning when using weak type
	  modifier in cast expressions, fixes bug 527990

2008-04-14  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala: fix interface base access,
	  fixes bug 527985

2008-04-14  Jürg Billeter  <j@bitron.ch>

	* vala/valaclass.vala, vala/valainterface.vala,
	  vala/valatypesymbol.vala, vala/valavaluetype.vala,
	  gobject/valaccodegenerator.vala: prepare support for nullable and
	  boxed value types

2008-04-14  Jürg Billeter  <j@bitron.ch>

	* vala/Makefile.am, vala/valaarraytype.vala,
	  vala/valaclasstype.vala, vala/valacodenode.vala,
	  vala/valadatatype.vala, vala/valaerrortype.vala,
	  vala/valaintegertype.vala, vala/valainterfacetype.vala,
	  vala/valamethodtype.vala, vala/valanullchecker.vala,
	  vala/valanulltype.vala, vala/valaparser.vala,
	  vala/valapointertype.vala, vala/valasemanticanalyzer.vala,
	  vala/valasymbolresolver.vala, vala/valatypeparametertype.vala,
	  vala/valaunresolvedtype.vala, vala/valavaluetype.vala,
	  gobject/valaccodegenerator.vala, compiler/valacompiler.vala,
	  vapigen/valagidlparser.vala: move experimental null reference
	  checking to separate visitor

2008-04-14  Marc-Andre Lureau  <marcandre.lureau@gmail.com>

	* vapi/glib-2.0.vapi (Value): renamed register_transform to
	register_transform_func.

2008-04-14  Jürg Billeter  <j@bitron.ch>

	* vala/valaobjectcreationexpression.vala, vala/valaparser.vala,
	  vala/valasemanticanalyzer.vala: don't require `new' operator for
	  struct initialization, fixes bug 526547

	* tests/structs.vala: port to new syntax

2008-04-13  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegeneratormethod.vala: remove warning about
	  unsupported return types for runtime type checks, we intend to
	  use out parameters instead of return values for structs in