@@ -1,6 +1,6 @@
 /* valaccodeforstatement.vala
  *
- * Copyright (C) 2006-2007  Jürg Billeter
+ * Copyright (C) 2006-2008  Jürg Billeter
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Lesser General Public
@@ -40,7 +40,7 @@ public class Vala.CCodeForStatement : CCodeStatement {
 	private Gee.List<CCodeExpression> initializer = new ArrayList<CCodeExpression> ();
 	private Gee.List<CCodeExpression> iterator = new ArrayList<CCodeExpression> ();
 	
-	public CCodeForStatement (CCodeExpression condition, CCodeStatement body = null) {
+	public CCodeForStatement (CCodeExpression condition, CCodeStatement? body = null) {
 		this.body = body;
 		this.condition = condition;
 	}
