@@ -1,6 +1,6 @@
 /* valaccodewhilestatement.vala
  *
- * Copyright (C) 2006-2007  Jürg Billeter
+ * Copyright (C) 2006-2008  Jürg Billeter
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Lesser General Public
@@ -36,7 +36,7 @@ public class Vala.CCodeWhileStatement : CCodeStatement {
 	 */
 	public CCodeStatement body { get; set; }
 	
-	public CCodeWhileStatement (CCodeExpression cond, CCodeStatement stmt = null) {
+	public CCodeWhileStatement (CCodeExpression cond, CCodeStatement? stmt = null) {
 		condition = cond;
 		body = stmt;
 	}
