@@ -36,7 +36,7 @@ public class Gee.ReadOnlyList<G> : Object, Iterable<G>, Collection<G>, List<G> {
 
 	private List<G> _list;
 
-	public ReadOnlyList (List<G> list = null) {
+	public ReadOnlyList (List<G>? list = null) {
 		this.list = list;
 	}
 
