@@ -44,7 +44,7 @@ public class Vala.Scope : Object {
 	 *
 	 * @return newly created scope
 	 */
-	public Scope (Symbol owner = null) {
+	public Scope (Symbol? owner = null) {
 		this.owner = owner;
 	}
 
