@@ -1209,7 +1209,7 @@ namespace GLib {
 	}
 	
 	public class Thread {
-		public static void init (ThreadFunctions vtable = null);
+		public static void init (ThreadFunctions? vtable = null);
 		public static bool supported ();
 		public static weak Thread create (ThreadFunc func, bool joinable) throws ThreadError;
 		public static weak Thread create_full (ThreadFunc func, ulong stack_size, bool joinable, bool bound, ThreadPriority priority) throws ThreadError;
@@ -1502,7 +1502,7 @@ namespace GLib {
 		public static string to_utf8 (string opsysstring, out ulong bytes_read, out ulong bytes_written) throws ConvertError;
 		public static string from_utf8 (string utf8string, long len, out ulong bytes_read, out ulong bytes_written) throws ConvertError;
 		public static string from_uri (string uri, out string hostname = null) throws ConvertError;
-		public static string to_uri (string filename, string hostname = null) throws ConvertError;
+		public static string to_uri (string filename, string? hostname = null) throws ConvertError;
 		public static string display_name (string filename);
 		public static string display_basename (string filename);
 	}
